// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/PipelineConfiguration/Modal/PipelineDetailModal render init snap 1`] = `
<body>
  <div>
    <section
      class=" css-1asj2n9"
    >
      <div
        class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
        tabindex="-1"
      >
        <div
          class="ant-drawer-mask"
        />
        <div
          aria-hidden="true"
          data-sentinel="start"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
        <div
          class="ant-drawer-content-wrapper"
          style="width: 720px;"
        >
          <div
            aria-modal="true"
            class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
            role="dialog"
          >
            <div
              class="ant-drawer-wrapper-body"
            >
              <div
                class="ant-drawer-header"
              >
                <div
                  class="ant-drawer-header-title"
                >
                  <div
                    class="ant-drawer-title"
                  >
                    流水线详情
                  </div>
                </div>
                <div
                  class="ant-drawer-extra"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          删 除
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          编 辑
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-drawer-body"
              >
                <div
                  class="closed-icon-custom"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <form
                      class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                          >
                            <label
                              class=""
                              title="流水线名称"
                            >
                              流水线名称
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary css-dev-only-do-not-override-txh9fw"
                                >
                                  pipeline1
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                          >
                            <label
                              class=""
                              title="流水线描述"
                            >
                              流水线描述
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary css-dev-only-do-not-override-txh9fw"
                                >
                                  desc
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                          >
                            <label
                              class=""
                              title="流水线地址"
                            >
                              流水线地址
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary css-dev-only-do-not-override-txh9fw"
                                >
                                  <a
                                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                                    href="127.0.0.1"
                                    rel="noopener noreferrer"
                                    target="_blank"
                                  >
                                    127.0.0.1
                                  </a>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                          >
                            <label
                              class=""
                              title="流水线节点"
                            >
                              流水线节点
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <section
                                  class="node-list"
                                >
                                  <div
                                    class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
                                  >
                                    <div
                                      class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                                    >
                                      <div
                                        class="ant-spin-container"
                                      >
                                        <div
                                          class="ant-table ant-table-scroll-horizontal"
                                        >
                                          <div
                                            class="ant-table-container"
                                          >
                                            <div
                                              class="ant-table-content"
                                              style="overflow-x: auto; overflow-y: hidden;"
                                            >
                                              <table
                                                style="min-width: 100%; table-layout: auto;"
                                              >
                                                <colgroup />
                                                <thead
                                                  class="ant-table-thead"
                                                >
                                                  <tr>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      节点名称
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      节点类型
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      审核规则模板
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      对接说明
                                                    </th>
                                                  </tr>
                                                </thead>
                                                <tbody
                                                  class="ant-table-tbody"
                                                >
                                                  <tr
                                                    aria-hidden="true"
                                                    class="ant-table-measure-row"
                                                    style="height: 0px; font-size: 0px;"
                                                  >
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                  </tr>
                                                  <tr
                                                    class="ant-table-row ant-table-row-level-0"
                                                    data-row-key="1"
                                                  >
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      node1
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      审核
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      default_MySQL1
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      <div
                                                        class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                                                      >
                                                        <div
                                                          class="ant-space-item"
                                                        >
                                                          <a
                                                            class="ant-typography css-dev-only-do-not-override-bj9uhl"
                                                          >
                                                            查看
                                                          </a>
                                                        </div>
                                                      </div>
                                                    </td>
                                                  </tr>
                                                </tbody>
                                              </table>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </section>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          data-sentinel="end"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle/PipelineConfiguration/Modal/PipelineDetailModal render show tour 1`] = `
<body>
  <div>
    <section
      class="focus-node-list css-1asj2n9"
    >
      <div
        class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
        tabindex="-1"
      >
        <div
          class="ant-drawer-mask"
        />
        <div
          aria-hidden="true"
          data-sentinel="start"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
        <div
          class="ant-drawer-content-wrapper"
          style="width: 720px;"
        >
          <div
            aria-modal="true"
            class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
            role="dialog"
          >
            <div
              class="ant-drawer-wrapper-body"
            >
              <div
                class="ant-drawer-header"
              >
                <div
                  class="ant-drawer-header-title"
                >
                  <div
                    class="ant-drawer-title"
                  >
                    流水线详情
                  </div>
                </div>
                <div
                  class="ant-drawer-extra"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          删 除
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          编 辑
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-drawer-body"
              >
                <div
                  class="closed-icon-custom"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <form
                      class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                          >
                            <label
                              class=""
                              title="流水线名称"
                            >
                              流水线名称
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary css-dev-only-do-not-override-txh9fw"
                                >
                                  pipeline1
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                          >
                            <label
                              class=""
                              title="流水线描述"
                            >
                              流水线描述
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary css-dev-only-do-not-override-txh9fw"
                                >
                                  desc
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                          >
                            <label
                              class=""
                              title="流水线地址"
                            >
                              流水线地址
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary css-dev-only-do-not-override-txh9fw"
                                >
                                  <a
                                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                                    href="127.0.0.1"
                                    rel="noopener noreferrer"
                                    target="_blank"
                                  >
                                    127.0.0.1
                                  </a>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                          >
                            <label
                              class=""
                              title="流水线节点"
                            >
                              流水线节点
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <section
                                  class="node-list"
                                >
                                  <div
                                    class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
                                  >
                                    <div
                                      class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                                    >
                                      <div
                                        class="ant-spin-container"
                                      >
                                        <div
                                          class="ant-table ant-table-scroll-horizontal"
                                        >
                                          <div
                                            class="ant-table-container"
                                          >
                                            <div
                                              class="ant-table-content"
                                              style="overflow-x: auto; overflow-y: hidden;"
                                            >
                                              <table
                                                style="min-width: 100%; table-layout: auto;"
                                              >
                                                <colgroup />
                                                <thead
                                                  class="ant-table-thead"
                                                >
                                                  <tr>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      节点名称
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      节点类型
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      审核规则模板
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      对接说明
                                                    </th>
                                                  </tr>
                                                </thead>
                                                <tbody
                                                  class="ant-table-tbody"
                                                >
                                                  <tr
                                                    aria-hidden="true"
                                                    class="ant-table-measure-row"
                                                    style="height: 0px; font-size: 0px;"
                                                  >
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                  </tr>
                                                  <tr
                                                    class="ant-table-row ant-table-row-level-0"
                                                    data-row-key="1"
                                                  >
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      node1
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      审核
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      default_MySQL1
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      <div
                                                        class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                                                      >
                                                        <div
                                                          class="ant-space-item"
                                                        >
                                                          <a
                                                            class="ant-typography css-dev-only-do-not-override-bj9uhl"
                                                          >
                                                            查看
                                                          </a>
                                                        </div>
                                                      </div>
                                                    </td>
                                                  </tr>
                                                </tbody>
                                              </table>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </section>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          data-sentinel="end"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
      </div>
    </section>
  </div>
</body>
`;
